compiler/tests/should-fail/InvalidProtocolAnnotation2.via
/* InvalidProtocolAnnotationError */

host alice : {A}
host bob   : {B}

fun main() {
    val a: int@Local(host = bob) = input int from alice;
}
